sonarqube cleanup.